# CTemplate

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
src/: CMakeLists.txt  Makefile.am  Makefile.in  main.c  path.c  path.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  test_path.c
