#==============================================================================#
# Process this file with automake to produce Makefile.in
#
# Contributor: Chen Ye <ycchina@gmail.com>
#==============================================================================#

# Local macros
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src . tests
