#==============================================================================#
# Process this file with automake to produce Makefile.in
#
# Contributor: Chen Ye <ycchina@gmail.com>
#==============================================================================#

lib_LTLIBRARIES = libpath.la
libpath_la_SOURCES = path.c path.h

bin_PROGRAMS = main
main_SOURCES = main.c
main_LDADD = libpath.la
